--- a/demo-angular-material/index.html
+++ b/demo-angular-material/index.html
@@ -2,20 +2,20 @@
 <html>
 <head>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
+  <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="bower_components/angular-material/themes/red-theme.css">
-  <link rel="stylesheet" href="bower_components/angular-material/themes/green-theme.css">
-  <link rel="stylesheet" href="bower_components/angular-material/themes/indigo-theme.css">
-  <link rel="stylesheet" href="bower_components/angular-material/themes/orange-theme.css">
-  <link rel="stylesheet" href="bower_components/angular-material/themes/cyan-theme.css">
-  <link rel="stylesheet" href="bower_components/angular-material/themes/grey-theme.css">
+  <link rel="stylesheet" href="../bower_components/angular-material/themes/red-theme.css">
+  <link rel="stylesheet" href="../bower_components/angular-material/themes/green-theme.css">
+  <link rel="stylesheet" href="../bower_components/angular-material/themes/indigo-theme.css">
+  <link rel="stylesheet" href="../bower_components/angular-material/themes/orange-theme.css">
+  <link rel="stylesheet" href="../bower_components/angular-material/themes/cyan-theme.css">
+  <link rel="stylesheet" href="../bower_components/angular-material/themes/grey-theme.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic">
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-aria/angular-aria.js"></script>
-  <script src="bower_components/angular-animate/angular-animate.js"></script>
-  <script src="bower_components/hammerjs/hammer.js"></script>
-  <script src="bower_components/angular-material/angular-material.js"></script>
+  <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/angular-aria/angular-aria.js"></script>
+  <script src="../bower_components/angular-animate/angular-animate.js"></script>
+  <script src="../bower_components/hammerjs/hammer.js"></script>
+  <script src="../bower_components/angular-material/angular-material.js"></script>
   <script src="script.js"></script>
 
 </head>
@@ -140,11 +140,7 @@
 
   </md-content>
 
-<!-- Didn't get this working -->
 <div ng-controller="BottomSheetExample" class="bottomSheetdemoBasicUsage">
-  <p style="padding-left: 20px;">
-    Bottom sheet can be dismissed with the service or a swipe down. (not working yet)
-  </p>
   <div class="bottom-sheet-demo inset" layout="column" layout-sm="row" layout-align="center">
     <md-button class="md-primary" ng-click="showListBottomSheet($event)">
       Show as List
